test_results_final.log
specs
+- run test
   +- compile test Debug native 1 errors
test_runner.zig:224:16: error: cannot assign to constant
        std.log.default_level = .err;
        ~~~~~~~^~~~~~~~~~~~~~
referenced by:
    main: test_runner.zig:358:49
    callMain [inlined]: /opt/homebrew/Cellar/zig/0.15.1/lib/zig/std/start.zig:627:37
    callMainWithArgs [inlined]: /opt/homebrew/Cellar/zig/0.15.1/lib/zig/std/start.zig:587:20
    main: /opt/homebrew/Cellar/zig/0.15.1/lib/zig/std/start.zig:602:28
    1 reference(s) hidden; use '-freference-trace=5' to see all references
error: the following command failed with 1 compilation errors:
/opt/homebrew/Cellar/zig/0.15.1/bin/zig test -ODebug --dep evm --dep primitives -Mroot=/Users/williamcory/guillotine-mini/test/specs/root.zig -ODebug --dep primitives -Mevm=/Users/williamcory/guillotine-mini/src/root.zig -ODebug -Mprimitives=/Users/williamcory/guillotine-mini/src/primitives/root.zig --test-runner /Users/williamcory/guillotine-mini/test_runner.zig --cache-dir .zig-cache --global-cache-dir /Users/williamcory/.cache/zig --name test --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.1/lib/zig/ --listen=-

Build Summary: 0/3 steps succeeded; 1 failed
specs transitive failure
+- run test transitive failure
   +- compile test Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/41805524195060a4b553d7d51909dd43/build /opt/homebrew/Cellar/zig/0.15.1/bin/zig /opt/homebrew/Cellar/zig/0.15.1/lib/zig /Users/williamcory/guillotine-mini .zig-cache /Users/williamcory/.cache/zig --seed 0xd9ae0479 -Z01088786ade11c9e specs
